  * Merge honor-ac-dirs.patch from Jan Engelhardt (OpenSUSE) with already existing
    Makefile patches (012_nxcomp..., 013_nxcompext_..., 014_nxcompshad_...).
  * Rename patches 030_nx-X11_... and 031_nx-X11_..., the tarball roll script
    currently requires ,,full'' or ,,full+lite'' in the file name.
  * Make patch headers DEP5 compliant (030_nx-X11_... and 031_nx-X11_...).

  [ Jan Engelhardt ]
  * Update patch: 001_add-main-makefile.full+lite.patch, allow passing of
    configure args.
  * Add patch: 030_nx-X11_configure-args.diff. Allow passing of configure args.
  * Add patch: 031_nx-X11_parallel-make.diff, enable parallel make.
  * Add patch: 301_nx-X11_use-shared-libs.full.diff, use shared libraries from
    distribution rather then libs included in source tree.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:48:19 +0100

nx-libs (2:3.5.0.10-0) unstable; urgency=low

  * Add patch: 006_nxcomp_libpng15.full+lite.patch, fix build against
    libpng 1.5.x.
  * Reintroduce patch: 008_nxcomp_sa_restorer.full+lite.patch, now in a
    version found on etersoft.ru, fixes build on ia64 architecture.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:43:50 +0100

nx-libs (2:3.5.0.9-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Providing pending patches in source tree.

  [ Oleksandr Shneyder ]
  * Update patch: 202_nx-x11_enable-xinerama.full.patch, disable Xinerama
    extension if NX_XINERAMA_CONF not exists.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 01 Feb 2012 14:39:57 +0100

nx-libs (2:3.5.0.8-0) unstable; urgency=low

  * Reorganize patch names, to reflect patch inclusion into lite+full or
    full-only ,,NX (redistributed)'' tarball.
  * Update patch: 001_add-main-makefile.full+lite.patch, only build, install,
    clean etc. NX subprojects if the folder exists.
  * Package x2goagent is an ,,all'' package, not ,,any''.