@@ -5,8 +5,10 @@ Author: Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
 Last-Update: 2011-12-31
 --- /dev/null
 +++ b/Makefile
-@@ -0,0 +1,34 @@
+@@ -0,0 +1,36 @@
 +#!/usr/bin/make -f
++
++CONFIGURE=./configure
 +
 +%:
 +	${MAKE} -C nxcomp $@
@@ -23,12 +25,12 @@ Last-Update: 2011-12-31
 +	echo "No testing for NX (redistributed)"
 +
 +build-lite:
-+	cd nxcomp && autoconf && ./configure && ${MAKE}
-+	cd nxproxy && autoconf && ./configure && ${MAKE}
++	cd nxcomp && autoconf && (${CONFIGURE}) && ${MAKE}
++	cd nxproxy && autoconf && (${CONFIGURE}) && ${MAKE}
 +
 +build-full:
 +# in the full case, we rely on "magic" in the nx-X11 imake-based makefiles...
-+	cd nxcomp && autoconf && ./configure
++	cd nxcomp && autoconf
 +	cd nxcompext && autoconf
 +	cd nxcompshad && autoconf
 +	cd nx-X11 && ${MAKE} World
